Issue #291 upgrading to newer cucumber API (WIP)

--- a/cucumber.eclipse.steps.jdt/build.properties
+++ b/cucumber.eclipse.steps.jdt/build.properties
@@ -3,4 +3,4 @@ output.. = classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               META-INF/lib/cucumber-java-1.2.2.jar
+               META-INF/lib/gherkin-5.1.0.jar
