--- a/cucumber.eclipse.steps.integration/build.properties
+++ b/cucumber.eclipse.steps.integration/build.properties
@@ -1,8 +1,6 @@
 source.. = src/main/java/
-output.. = classes/
-bin.includes = META-INF/,\
-               .,\
+output.. = target/classes/
+bin.includes = .,\
                plugin.xml,\
-               META-INF/lib/cucumber-core-1.2.5.jar,\
-               META-INF/lib/gherkin-2.12.2.jar,\
-               META-INF/lib/cucumber-expressions-6.1.0.jar
+               META-INF/,\
+               META-INF/lib/gherkin-2.12.2.jar
