--- a/cucumber.eclipse.steps.integration/build.properties
+++ b/cucumber.eclipse.steps.integration/build.properties
@@ -3,4 +3,6 @@ output.. = target/classes/
 bin.includes = .,\
                plugin.xml,\
                META-INF/,\
-               META-INF/lib/gherkin-2.12.2.jar
+               META-INF/lib/gherkin-2.12.2.jar,\
+               META-INF/lib/datatable-1.1.7.jar,\
+               META-INF/lib/cucumber-expressions-6.2.0.jar
