--- a/cucumber.eclipse.steps.jdt/build.properties
+++ b/cucumber.eclipse.steps.jdt/build.properties
@@ -2,5 +2,4 @@ source.. = src/main/java/
 output.. = classes/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml,\
-               META-INF/lib/gherkin-5.1.0.jar
+               plugin.xml
